@@ -13,11 +13,10 @@
 		<email>roundcube@gmail.com</email>
 		<active>yes</active>
 	</lead>
-	<date>2010-03-29</date>
-	<time>13:20:00</time>
+	<date>2013-08-29</date>
 	<version>
-		<release>1.1</release>
-		<api>1.1</api>
+		<release>1.2</release>
+		<api>1.2</api>
 	</version>
 	<stability>
 		<release>stable</release>
